Header and jumbo macros details

--- a/index.html
+++ b/index.html
@@ -13,13 +13,24 @@
     <div class="container">
 
        <!-- header navigazione -->
-      <header>
+      <header class="nav">
 
+          <!-- toolbar superiore -->
         <nav>
+
+          <!-- toolbar centrata -->
+          <div class="toolbar">
+
+          </div>
 
         </nav>
-
+        <hr>
         <nav>
+
+          <!-- toolbar centrata -->
+          <div class="toolbar center">
+
+          </div>
 
         </nav>
 
@@ -28,12 +39,19 @@
       <main>
 
         <!-- jumbotron -->
-        <section>
+        <section id="jumbosection">
+
+          <img id="jumbotron"src="img/jumbotron.png" alt="jumbotron">
+
+          <div class="jumbotext center">
+
+          </div>
 
         </section>
 
         <!-- columns section -->
         <section>
+
 
         </section>
 
