Section columns added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
 
           <!-- toolbar centrata -->
-          <div class="toolbar">
+          <div class="toolbar center">
 
           </div>
 
@@ -51,6 +51,45 @@
 
         <!-- columns section -->
         <section>
+
+          <!-- Logo and text -->
+
+          <div class="cubelogo center">
+
+            <img src="img/cube.png" alt="cube img columns section">
+
+            <div>
+              TESTO TESTO TESTO
+            </div>
+
+            <div>
+              <p>testo testo testo </p>
+            </div>
+
+          </div>
+
+           <!-- hat section with logo and text -->
+          <div class="hat center">
+
+          </div>
+
+           <!-- columns -->
+          <div class="clearfix center columns">
+
+            <div class="boxes">
+              TESTO
+
+            </div>
+            <div id="specialbox"class="boxes">
+              TESTO
+
+            </div>
+            <div class="boxes">
+              TESTO
+
+            </div>
+
+          </div>
 
 
         </section>
