grid section added

--- a/index.html
+++ b/index.html
@@ -54,53 +54,79 @@
 
           <!-- Logo and text -->
 
-          <div class="cubelogo center">
+          <div class="center">
 
-            <img src="img/cube.png" alt="cube img columns section">
+            <div class="cubelogo">
 
-            <div>
-              TESTO TESTO TESTO
+
+                 <img src="img/cube.png" alt="cube img columns section">
+
+                 <div>
+                  TESTO TESTO TESTO
+                 </div>
+
+                <div>
+                  <p>testo testo testo </p>
+                </div>
+
             </div>
-
-            <div>
-              <p>testo testo testo </p>
-            </div>
-
-          </div>
 
            <!-- hat section with logo and text -->
-          <div class="hat center">
-
-          </div>
-
-           <!-- columns -->
-          <div class="clearfix center columns">
-
-            <div class="boxes">
-              TESTO
-
-            </div>
-            <div id="specialbox"class="boxes">
-              TESTO
-
-            </div>
-            <div class="boxes">
-              TESTO
+            <div class="hat">
 
             </div>
 
-          </div>
+            <!-- columns -->
+            <div class="clearfix columns">
 
+              <div class="boxes">
+                TESTO
+
+              </div>
+              <div id="specialbox"class="boxes">
+                TESTO
+
+              </div>
+              <div class="boxes">
+                TESTO
+
+              </div>
+
+           </div>
+
+        </div>
 
         </section>
 
            <!-- grid sections -->
         <section>
 
+          <div class="gridsection">
+
+            <div class="center">
+
+              <div class="gridtext">
+
+              </div>
+
+              <div class="grid">
+
+              </div>
+
+            </div>
+
+          </div>
+
         </section>
 
          <!-- pre-footer section -->
         <section>
+
+          <div class="center">
+
+            
+
+          </div>
 
         </section>
 
@@ -109,6 +135,8 @@
 
        <!-- credits and links -->
       <footer>
+
+
 
       </footer>
 
