basic layout done

--- a/index.html
+++ b/index.html
@@ -124,7 +124,15 @@
 
           <div class="center">
 
-            
+        <!-- text and logos on the right -->
+            <div class="prefooterlogo">
+
+            </div>
+
+            <!-- text and img on the right -->
+            <div class="prefooterimg">
+
+            </div>
 
           </div>
 
@@ -135,6 +143,42 @@
 
        <!-- credits and links -->
       <footer>
+
+        <div class="center">
+
+
+           <div class="credits">
+             <div class="creditbox">
+               TESTO
+             </div>
+             <div class="creditbox">
+               TESTO
+             </div>
+             <div class="creditbox">
+               TESTO
+             </div>
+             <div class="creditbox">
+               TESTO
+             </div>
+
+           </div>
+
+           <div class="contacts">
+
+              <div class="lenguages">
+
+              </div>
+
+              <hr>
+
+              <div class="copyright">
+
+              </div>
+
+           </div>
+
+
+        </div>
 
 
 
