upper toolbar finished

--- a/index.html
+++ b/index.html
@@ -15,11 +15,53 @@
        <!-- header navigazione -->
       <header class="nav">
 
-          <!-- toolbar superiore -->
+          <!-- toolbar -->
         <nav>
 
-          <!-- toolbar centrata -->
+          <!-- toolbar superiore -->
           <div class="toolbar center">
+
+            <div class="left clearfix">
+
+              <div class="menutoolbar">
+
+                 <span><i class="fas fa-globe-europe"></i></span>
+
+                 <span> <a id="linkborder" href="#">English</a></span>
+
+              </div>
+
+              <div class="menutoolbar">
+
+                  <a href="#">Contact Us</a>
+
+              </div>
+
+
+            </div>
+
+            <div class="right clearfix">
+
+              <div class="button colored">
+
+                 <a id="freehub" href="#">GetHubspotFree</a>
+
+              </div>
+              <div  class="button colored">
+
+                <a id="login" href="#">Log in</a>
+
+              </div>
+              <div class="button search">
+
+                <a id="searchcolor"href="#"><i class="fas fa-search"></i></a>
+
+              </div>
+
+
+
+            </div>
+
 
           </div>
 
@@ -27,8 +69,16 @@
         <hr>
         <nav>
 
-          <!-- toolbar centrata -->
+          <!-- toolbar inferiore-->
           <div class="toolbar center">
+
+            <div class="left">
+
+            </div>
+
+            <div class="right">
+
+            </div>
 
           </div>
 
