--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
 
               </div>
 
-
             </div>
 
             <div class="right clearfix">
@@ -58,8 +57,6 @@
 
               </div>
 
-
-
             </div>
 
 
@@ -72,11 +69,24 @@
           <!-- toolbar inferiore-->
           <div class="toolbar center">
 
-            <div class="left">
+            <div class="left clearfix">
+
+              <img src="img/logo.svg" alt="logo hubspot">
 
             </div>
 
-            <div class="right">
+            <div class="right clearfix">
+
+              <span><a href="#">About</a></span>
+              <span><a href="#">Partners</a></span>
+              <span><a href="#">Resources</a></span>
+              <span><a href="#">Pricing</a></span>
+              <span><a href="#">Software</a></span>
+
+
+
+
+
 
             </div>
 
