Header done and jumbo done

--- a/index.html
+++ b/index.html
@@ -83,11 +83,6 @@
               <span><a href="#">Pricing</a></span>
               <span><a href="#">Software</a></span>
 
-
-
-
-
-
             </div>
 
           </div>
@@ -104,6 +99,28 @@
           <img id="jumbotron"src="img/jumbotron.png" alt="jumbotron">
 
           <div class="jumbotext center">
+            <div class="textjumbo">
+
+              <div = "jumboitem">
+              <h1>There's a better way
+              to <br>grow.</h1>
+              </div>
+
+              <div class="jumboitem">
+              <p>Marketing, sales, and service software that helps your business grow without<br>compromise. Because "good for the business" should also mean "good for the <br>customer."
+             </p>
+             </div>
+
+             <div class="jumboitem">
+             <a id="freehubjumbo" href="#">GetHubspotFree</a>
+             </div>
+
+            <div class="jumboitem">
+            <h6>Get started with FREE tools,and upgrade as you grow.</h6>
+            </div>
+
+            </div>
+
 
           </div>
 
