columns section - hat done

--- a/index.html
+++ b/index.html
@@ -121,7 +121,6 @@
 
             </div>
 
-
           </div>
 
         </section>
@@ -135,21 +134,56 @@
 
             <div class="cubelogo">
 
-
                  <img src="img/cube.png" alt="cube img columns section">
 
                  <div>
-                  TESTO TESTO TESTO
+                  <h1>Powerful Alone. Better Together</h1>
                  </div>
 
                 <div>
-                  <p>testo testo testo </p>
+                  <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its <br>core. They're powerful alone  &mdash;  but even better when used together. </p>
                 </div>
 
             </div>
 
            <!-- hat section with logo and text -->
-            <div class="hat">
+            <div class="hat clearfix">
+
+              <div class="left-hat">
+
+                <img src="img/CRM-illustration.svg" alt="">
+
+                <div class="crm-button">
+
+                  <a  href="#">Learn More</a>
+
+                </div>
+
+              </div>
+
+              <div class="right-hat">
+
+                <h1><strong>Free HubSpot CRM</strong></h1>
+
+                <p>Everything you need to organize, track, and build better relationships with leads and  <br> customers. Yes, it's 100% free. Forever.  </p>
+
+                <h3><strong>POPOLAR FEATURE </strong>  <div class="line">
+
+                  </div></h3> <br>
+
+                <!-- &emsp;&emsp;&emsp;-->
+
+                <!-- <div class="line">
+
+                </div> -->
+
+                  <span><i class="fas fa-check-circle"></i>&emsp; Contact Insight</span>
+                  <span><i class="fas fa-check-circle"></i>&emsp; Deals</span>
+                  <span><i class="fas fa-check-circle"></i>&emsp; Task</span>
+
+              </div>
+
+
 
             </div>
 
