--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
            <!-- hat section with logo and text -->
             <div class="hat clearfix">
 
-              <div class="left-hat">
+              <div class="lhat">
 
                 <img src="img/CRM-illustration.svg" alt="">
 
@@ -161,7 +161,7 @@
 
               </div>
 
-              <div class="right-hat">
+              <div class="rhat">
 
                 <h1><strong>Free HubSpot CRM</strong></h1>
 
@@ -171,15 +171,14 @@
 
                   </div></h3> <br>
 
-                <!-- &emsp;&emsp;&emsp;-->
+                  <!-- <div class="hat-icon"> -->
 
-                <!-- <div class="line">
+                    <span><i class="fas fa-check-circle"></i>&emsp; Contact Insight</span>
+                    <span><i class="fas fa-check-circle"></i>&emsp; Deals</span>
+                    <span><i class="fas fa-check-circle"></i>&emsp; Task</span>
 
-                </div> -->
+                <!-- </div> -->
 
-                  <span><i class="fas fa-check-circle"></i>&emsp; Contact Insight</span>
-                  <span><i class="fas fa-check-circle"></i>&emsp; Deals</span>
-                  <span><i class="fas fa-check-circle"></i>&emsp; Task</span>
 
               </div>
 
