Columns section done.

--- a/index.html
+++ b/index.html
@@ -190,15 +190,112 @@
             <div class="clearfix columns">
 
               <div class="boxes">
-                TESTO
+
+                <div class="boxes-img">
+
+                <img src="img/Marketing-Hub-Free.svg" alt="Marketing-Hub">
+
+                <h1>Marketing Hub</h1>
+
+                <p>Marketing software to help you grow <br>traffic, convert more visitors, and run  <br>complete inbound marketing  <br>campaigns at scale. </p>
+
+              </div>
+
+               <div class="boxes-item">
+
+                 <h3>POPOLAR FEATURE</h3>
+
+                 <ul class="boxes-item-position">
+
+                     <div><i class="fas fa-check-circle"></i>&emsp; Lead Generation
+                     </div>
+                     <div><i class="fas fa-check-circle"></i>&emsp; Marketing Automation
+                     </div>
+                     <div><i class="fas fa-check-circle"></i>&emsp; Analytics
+                     </div>
+
+                 </ul>
+
+                 <div class="crm-button-boxes">
+
+                   <a  href="#">Learn More</a>
+
+                 </div>
+
+               </div>
 
               </div>
               <div id="specialbox"class="boxes">
-                TESTO
+
+                <div class="boxes-img">
+
+                <img src="img/Sales-Professional-illustration.svg" alt="Sales-Professional">
+
+                <h1>Sales Hub</h1>
+
+                <p>Time-saving sales software that helps<br>you get deeper insights into prospects,<br>automate the tasks you hate, and close<br>more deals faster. </p>
+
+              </div>
+
+              <div class="boxes-item">
+
+                <h3>POPOLAR FEATURE</h3>
+
+                <ul class="boxes-item-position">
+
+                    <div><i class="fas fa-check-circle"></i>&emsp; Email Tracking
+                    </div>
+                    <div><i class="fas fa-check-circle"></i>&emsp; Meeting Scheduling
+                    </div>
+                    <div><i class="fas fa-check-circle"></i>&emsp; Email Automation
+                    </div>
+
+                </ul>
+
+                <div class="crm-button-boxes">
+
+                  <a  href="#">Learn More</a>
+
+                </div>
+
+              </div>
 
               </div>
               <div class="boxes">
-                TESTO
+
+                <div class="boxes-img">
+
+                  <img src="img/Service-Hub-illustration.svg" alt="Service-Hub">
+
+                  <h1>Service Hub</h1>
+
+                  <p>Customer service software to help you <br>connect with customers, exceed <br>expectations, and turn them into<br>promoters that grow your business.</p>
+
+                </div>
+
+                <div class="boxes-item">
+
+                  <h3>POPOLAR FEATURE</h3>
+
+                  <ul class="boxes-item-position">
+
+                      <div><i class="fas fa-check-circle"></i>&emsp; Tickets
+                      </div>
+                      <div><i class="fas fa-check-circle"></i>&emsp; Costumer Feedback
+                      </div>
+                      <div><i class="fas fa-check-circle"></i>&emsp; Knowledge Base
+                      </div>
+
+                  </ul>
+
+                  <div class="crm-button-boxes">
+
+                    <a  href="#">Learn More</a>
+
+                  </div>
+
+                </div>
+
 
               </div>
 
