--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
              </div>
 
             <div class="jumboitem">
-            <h6>Get started with FREE tools,and upgrade as you grow.</h6>
+            <h6>Get started with FREE tools, and upgrade as you grow.</h6>
             </div>
 
             </div>
@@ -171,14 +171,9 @@
 
                   </div></h3> <br>
 
-                  <!-- <div class="hat-icon"> -->
-
                     <span><i class="fas fa-check-circle"></i>&emsp; Contact Insight</span>
                     <span><i class="fas fa-check-circle"></i>&emsp; Deals</span>
                     <span><i class="fas fa-check-circle"></i>&emsp; Task</span>
-
-                <!-- </div> -->
-
 
               </div>
 
@@ -314,9 +309,148 @@
 
               <div class="gridtext">
 
+                <h1>Learn and grow with award-winning support and a thriving community <br>  behind you.</h1>
+
+                <p>You don't have to go it alone. Master the inbound methodology and get the most out of your tools with HubSpot's legendary customer support team and a community<br>of thousands of marketing and sales pros just like you. </p>
+
               </div>
 
               <div class="grid">
+
+                <div class="gridbox">
+
+                  <div class="gridboxup">
+
+                    <img src="img/handshake.svg" alt="">
+
+                  </div>
+
+                  <div class="gridboxdown">
+                      <h1>150 </h1><span> &#43;</span>
+                      <p>HubSpot user groups</p>
+
+                  </div>
+
+                </div>
+                <div class="gridbox">
+
+                  <div class="gridboxup">
+
+                    <img src="img/handshake.svg" alt="">
+
+                  </div>
+                  <div class="gridboxdown">
+                      <h1>150 </h1><span> &#43;</span>
+                      <p>HubSpot user groups</p>
+
+
+                  </div>
+
+
+
+                </div>
+                <div class="gridbox">
+
+                  <div class="gridboxup">
+
+                    <img src="img/handshake.svg" alt="">
+
+                  </div>
+                  <div class="gridboxdown">
+                      <h1>150 </h1><span> &#43;</span>
+                      <p>HubSpot user groups</p>
+
+
+                  </div>
+
+
+
+                </div>
+                <div class="gridbox">
+
+                  <div class="gridboxup">
+
+                    <img src="img/handshake.svg" alt="">
+
+                  </div>
+                  <div class="gridboxdown">
+                      <h1>150 </h1><span> &#43;</span>
+                      <p>HubSpot user groups</p>
+
+
+                  </div>
+
+
+
+                </div>
+                <div class="gridbox">
+
+                  <div class="gridboxup">
+
+                    <img src="img/handshake.svg" alt="">
+
+                  </div>
+                  <div class="gridboxdown">
+                      <h1>150 </h1><span> &#43;</span>
+                      <p>HubSpot user groups</p>
+
+
+                  </div>
+
+
+
+                </div>
+                <div class="gridbox">
+
+                  <div class="gridboxup">
+
+                    <img src="img/handshake.svg" alt="">
+
+                  </div>
+                  <div class="gridboxdown">
+                      <h1>150 </h1><span> &#43;</span>
+                      <p>HubSpot user groups</p>
+
+
+                  </div>
+
+
+
+                </div>
+                <div class="gridbox">
+
+                  <div class="gridboxup">
+
+                    <img src="img/handshake.svg" alt="">
+
+                  </div>
+                  <div class="gridboxdown">
+                      <h1>150 </h1><span> &#43;</span>
+                      <p>HubSpot user groups</p>
+
+
+                  </div>
+
+
+
+                </div>
+                <div class="gridbox">
+
+                  <div class="gridboxup">
+
+                    <img src="img/handshake.svg" alt="">
+
+                  </div>
+                  <div class="gridboxdown">
+                      <h1>150 </h1><span> &#43;</span>
+                      <p>HubSpot user groups</p>
+
+
+                  </div>
+
+
+
+                </div>
 
               </div>
 
