grid section done

--- a/index.html
+++ b/index.html
@@ -336,12 +336,12 @@
 
                   <div class="gridboxup">
 
-                    <img src="img/handshake.svg" alt="">
+                    <img src="img/homepage_community_blog.svg" alt="">
 
                   </div>
                   <div class="gridboxdown">
-                      <h1>150 </h1><span> &#43;</span>
-                      <p>HubSpot user groups</p>
+                      <h1>4.5M </h1><span> &#43;</span>
+                      <p>monthly visits</p>
 
 
                   </div>
@@ -353,12 +353,12 @@
 
                   <div class="gridboxup">
 
-                    <img src="img/handshake.svg" alt="">
+                    <img src="img/homepage_community_academy.svg" alt="">
 
                   </div>
                   <div class="gridboxdown">
-                      <h1>150 </h1><span> &#43;</span>
-                      <p>HubSpot user groups</p>
+                      <h1>155K</h1><span> &#43;</span>
+                      <p>certified professionals</p>
 
 
                   </div>
@@ -370,12 +370,12 @@
 
                   <div class="gridboxup">
 
-                    <img src="img/handshake.svg" alt="">
+                    <img src="img/homepage_community_inbound.svg" alt="">
 
                   </div>
                   <div class="gridboxdown">
-                      <h1>150 </h1><span> &#43;</span>
-                      <p>HubSpot user groups</p>
+                      <h1>21K</h1><span> &#43;</span>
+                      <p>registered attendees</p>
 
 
                   </div>
@@ -387,12 +387,12 @@
 
                   <div class="gridboxup">
 
-                    <img src="img/handshake.svg" alt="">
+                    <img src="img/homepage_community_blog.svg" alt="">
 
                   </div>
                   <div class="gridboxdown">
-                      <h1>150 </h1><span> &#43;</span>
-                      <p>HubSpot user groups</p>
+                      <h1>200</h1><span> &#43;</span>
+                      <p>integrations</p>
 
 
                   </div>
@@ -404,12 +404,12 @@
 
                   <div class="gridboxup">
 
-                    <img src="img/handshake.svg" alt="">
+                    <img src="img/homepage_community_globe.svg" alt="">
 
                   </div>
                   <div class="gridboxdown">
-                      <h1>150 </h1><span> &#43;</span>
-                      <p>HubSpot user groups</p>
+                      <h1>6 </h1><span> &#43;</span>
+                      <p>languages</p>
 
 
                   </div>
@@ -421,12 +421,12 @@
 
                   <div class="gridboxup">
 
-                    <img src="img/handshake.svg" alt="">
+                    <img src="img/homepage_community_followers.svg" alt="">
 
                   </div>
                   <div class="gridboxdown">
-                      <h1>150 </h1><span> &#43;</span>
-                      <p>HubSpot user groups</p>
+                      <h1>2.6M</h1><span> &#43;</span>
+                      <p>social followers</p>
 
 
                   </div>
@@ -438,12 +438,12 @@
 
                   <div class="gridboxup">
 
-                    <img src="img/handshake.svg" alt="">
+                    <img src="img/lists.svg" alt="">
 
                   </div>
                   <div class="gridboxdown">
-                      <h1>150 </h1><span> &#43;</span>
-                      <p>HubSpot user groups</p>
+                      <h1>5K</h1><span> &#43;</span>
+                      <p>profiles and counting</p>
 
 
                   </div>
