prefooter logo section done.

--- a/index.html
+++ b/index.html
@@ -449,7 +449,6 @@
                   </div>
 
 
-
                 </div>
 
               </div>
@@ -467,6 +466,60 @@
 
         <!-- text and logos on the right -->
             <div class="prefooterlogo">
+
+              <div class="prefooterlogo-left">
+
+                <h1>64,500</h1>
+                <p>customers in over <strong>100</strong> <br>  countries growing their<br>businesses with HubSpot</p>
+
+              </div>
+              <div class="prefooterlogo-right">
+
+                <div class="prefootersponsor">
+
+                  <img src="img/atlassiansvg.svg" alt="">
+
+                </div>
+
+                <div class="prefootersponsor">
+
+                  <img src="img/doordashsvg.svg" alt="">
+
+                </div>
+                <div class="prefootersponsor">
+
+                  <img src="img/crowdsvg.svg" alt="">
+
+                </div>
+                <div class="prefootersponsor">
+
+                  <img src="img/survey.svg" alt="">
+
+                </div>
+                <div class="prefootersponsor">
+
+                  <img src="img/subarusvg.svg" alt="">
+
+                </div>
+                <div class="prefootersponsor">
+
+                  <img src="img/wistiasvg.svg" alt="">
+
+                </div>
+                <div class="prefootersponsor">
+
+                  <img src="img/clanpasssvg.svg" alt="">
+
+                </div>
+                <div class="prefootersponsor">
+
+                  <img src="img/vmwaresvg.svg" alt="">
+
+                </div>
+
+
+
+              </div>
 
             </div>
 
