--- a/index.html
+++ b/index.html
@@ -526,6 +526,41 @@
             <!-- text and img on the right -->
             <div class="prefooterimg">
 
+              <div class="prefooterimg-text">
+
+                <div class="prefooterimg-item">
+
+                  <h1>Start Growing with HubSpot<br>Today  </h1>
+
+                </div>
+
+                <div class="prefooterimg-item">
+
+                  <p>With tools to make every part of your process more human and a<br>support team excitefd to help you, getting started with inbound has<br>never been easier.</p>
+
+                </div>
+
+                <div class="prefooterimg-item">
+
+                  <span><a href="#">GetHubspotFree</a></span>
+
+                </div>
+
+                <div class="prefooterimg-item">
+
+                  <p>Get started with FREE tools,or get more with our premium software.</p>
+
+                </div>
+
+                </div>
+                  <div class="prefooterimg-logo">
+
+                  <img src="img/woman.webp" alt="">
+
+                </div>
+
+
+
             </div>
 
           </div>
