--- a/index.html
+++ b/index.html
@@ -575,19 +575,99 @@
 
         <div class="center">
 
-
            <div class="credits">
+
              <div class="creditbox">
-               TESTO
+
+                <ul>
+
+                 <li><strong>Increase Your Traffic</strong></li>
+                 <li><a href="#">Ad Software</a></li>
+                 <li><a href="#">Blog Software</a></li>
+                 <li><a href="#">SEO Software</a></li>
+                 <li><a href="#">Social Media Software</a></li>
+                 <li><a href="#">Content Management System</a</li>
+
+               </ul>
+
              </div>
+
              <div class="creditbox">
-               TESTO
+
+               <ul>
+
+                <li><strong>Connect With Leads</strong></li>
+                <li><a href="#">Find New Prospects</a></li>
+                <li><a href="#">Email Tracking</a></li>
+                <li><a href="#">Sales Email Templates</a></li>
+                <li><a href="#">Click to Call Your Leads</a></li>
+                <li><a href="#">Email Marketing</a</li>
+
+              </ul>
+
+
              </div>
+
              <div class="creditbox">
-               TESTO
+
+               <ul>
+
+                <li><strong>Close and Manage Leads</strong></li>
+                <li><a href="#">Document Tracking Tool</a></li>
+                <li><a href="#">Meeting SChedule Tool</a></li>
+                <li><a href="#">Sales Automation Tool</a></li>
+                <li><a href="#">Lead Management Tool</a></li>
+                <li><a href="#">Pipeline Management Tool</a</li>
+
+              </ul>
+
              </div>
+
              <div class="creditbox">
-               TESTO
+
+               <ul>
+
+                <li><strong>Support and Tools</strong></li>
+                <li><a href="#">HubSpot Partners</a></li>
+                <li><a href="#">Join a Local User Group</a></li>
+                <li><a href="#">Get a Free Website Report</a></li>
+                <li><a href="#">HubSpot Templates/a></li>
+                <li><a href="#">Free Tools & Generators</a></li>
+                <li><a id="contactbutton" href="#">Contact HubSpot Support</a></li>
+
+                <div class="social">
+                  <div class="icons">
+
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+
+                  </div>
+                  <div class="icons">
+
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+
+                  </div>
+                  <div class="icons">
+
+                    <a href="#"><i class="fab fa-youtube"></i></a>
+
+                  </div>
+                  <div class="icons">
+
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+
+                  </div>
+                  <div class="icons">
+
+                    <a href="#"><i class="fab fa-linkedin-in"></i></a>
+
+                  </div>
+
+
+                </div>
+
+
+              </ul>
+
              </div>
 
            </div>
@@ -595,12 +675,35 @@
            <div class="contacts">
 
               <div class="lenguages">
+                <div class="lenguages-center">
+
+                    <a href="#"><span>English</span></a>
+                    <a href="#"><span>Deutsch</span></a>
+                    <a href="#">  <span>日本人</span></a>
+                    <a href="#"><span>Español</span></a>
+                    <a href="#"><span>Português</span> </a>
+                    <a href="#">  <span>Français</span></a>
+
+                </div>
 
               </div>
 
               <hr>
 
               <div class="copyright">
+
+                <div class="copyright-left">
+
+                  <img src="img/logo.svg" alt="">
+                  <h3>Copyright &#169; 2019 HubSpot, Inc.</h3>
+
+                </div>
+                <div class="copyright-right">
+
+                   <a href="#"><h3>Privacy Policy</h3></a>
+                   <a href="#"><h3>Legal Stuff</h3></a>
+
+                </div>
 
               </div>
 
