footer icon and text fixed

--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                 <li><a href="#">HubSpot Partners</a></li>
                 <li><a href="#">Join a Local User Group</a></li>
                 <li><a href="#">Get a Free Website Report</a></li>
-                <li><a href="#">HubSpot Templates/a></li>
+                <li><a href="#">HubSpot Templates</a></li>
                 <li><a href="#">Free Tools & Generators</a></li>
                 <li><a id="contactbutton" href="#">Contact HubSpot Support</a></li>
 
@@ -694,7 +694,7 @@
 
                 <div class="copyright-left">
 
-                  <img src="img/logo.svg" alt="">
+                  <img src="img/Wordmark-White.svg" alt="">
                   <h3>Copyright &#169; 2019 HubSpot, Inc.</h3>
 
                 </div>
@@ -709,16 +709,11 @@
 
            </div>
 
-
         </div>
-
-
 
       </footer>
 
     </div>
-
-
 
   </body>
 </html>
