--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
+
   <body>
 
     <div class="container">
@@ -21,34 +22,36 @@
           <!-- toolbar superiore -->
           <div class="toolbar center">
 
+              <!-- left side toolbar superiore -->
             <div class="left clearfix">
 
               <div class="menutoolbar">
 
                  <span><i class="fas fa-globe-europe"></i></span>
 
-                 <span> <a id="linkborder" href="#">English</a></span>
+                 <span> <a id="linkborder" href="#"><strong>English</strong></a></span>
 
               </div>
 
               <div class="menutoolbar">
 
-                  <a href="#">Contact Us</a>
+                  <a href="#"><strong>Contact Us</strong></a>
 
               </div>
 
             </div>
 
+             <!-- right side toolbar superiore -->
             <div class="right clearfix">
 
               <div class="button colored">
 
-                 <a id="freehub" href="#">GetHubspotFree</a>
+                 <a id="freehub" href="#"><strong>GetHubspotFree</strong></a>
 
               </div>
               <div  class="button colored">
 
-                <a id="login" href="#">Log in</a>
+                <a id="login" href="#"><strong>Log in</strong></a>
 
               </div>
               <div class="button search">
@@ -63,29 +66,33 @@
           </div>
 
         </nav>
+
         <hr>
+
         <nav>
 
           <!-- toolbar inferiore-->
           <div class="toolbar center">
 
+             <!-- left side toolbar inferiore -->
             <div class="left clearfix">
 
               <img src="img/logo.svg" alt="logo hubspot">
 
             </div>
 
+            <!-- right side toolbar inferiore -->
             <div class="right clearfix">
 
-              <span><a href="#">About</a></span>
-              <span><a href="#">Partners</a></span>
-              <span><a href="#">Resources</a></span>
-              <span><a href="#">Pricing</a></span>
-              <span><a href="#">Software</a></span>
+              <span><a href="#"><strong>About</strong></a></span>
+              <span><a href="#"><strong>Partners</strong></a></span>
+              <span><a href="#"><strong>Resources</strong></a></span>
+              <span><a href="#"><strong>Pricing</strong></a></span>
+              <span><a href="#"><strong>Software</strong></a></span>
 
             </div>
 
-          </div>
+          </div></strong>
 
         </nav>
 
@@ -99,49 +106,63 @@
           <img id="jumbotron"src="img/jumbotron.png" alt="jumbotron">
 
           <div class="jumbotext center">
+
             <div class="textjumbo">
 
+              <!-- Jumbotron text -->
               <div = "jumboitem">
-              <h1>There's a better way
-              to <br>grow.</h1>
+
+                 <h1>There's a better way
+                 to <br>grow.</h1>
+
               </div>
 
+               <div class="jumboitem">
+
+                 <p>Marketing, sales, and service software that helps your business grow without<br>compromise. Because "good for the business" should also mean "good for the<br>customer."
+                 </p>
+
+               </div>
+
+               <div class="jumboitem">
+
+                  <a id="freehubjumbo" href="#"><strong>GetHubspotFree</strong></a>
+
+               </div>
+
               <div class="jumboitem">
-              <p>Marketing, sales, and service software that helps your business grow without<br>compromise. Because "good for the business" should also mean "good for the <br>customer."
-             </p>
-             </div>
 
-             <div class="jumboitem">
-             <a id="freehubjumbo" href="#">GetHubspotFree</a>
-             </div>
+                 <h6>Get started with FREE tools, and upgrade as you grow.</h6>
 
-            <div class="jumboitem">
-            <h6>Get started with FREE tools, and upgrade as you grow.</h6>
-            </div>
+              </div>
 
             </div>
 
           </div>
 
+          <!-- fine section -->
         </section>
 
         <!-- columns section -->
         <section>
 
-          <!-- Logo and text -->
-
+          <!-- cube Logo and text -->
           <div class="center">
 
             <div class="cubelogo">
 
-                 <img src="img/cube.png" alt="cube img columns section">
+                 <img src="img/cube.png" alt="cube img main section">
 
                  <div>
+
                   <h1>Powerful Alone. Better Together</h1>
+
                  </div>
 
                 <div>
+
                   <p>HubSpot offers a full stack of software for marketing, sales, and customer service, with a completely free CRM at its <br>core. They're powerful alone  &mdash;  but even better when used together. </p>
+
                 </div>
 
             </div>
@@ -149,27 +170,34 @@
            <!-- hat section with logo and text -->
             <div class="hat clearfix">
 
+
+               <!-- left hat section  -->
               <div class="lhat">
 
                 <img src="img/CRM-illustration.svg" alt="">
 
                 <div class="crm-button">
 
-                  <a  href="#">Learn More</a>
+                  <a  href="#"><strong>Learn More</strong></a>
 
                 </div>
 
               </div>
 
+
+               <!-- right hat section -->
               <div class="rhat">
 
                 <h1><strong>Free HubSpot CRM</strong></h1>
 
                 <p>Everything you need to organize, track, and build better relationships with leads and  <br> customers. Yes, it's 100% free. Forever.  </p>
 
-                <h3><strong>POPOLAR FEATURE </strong>  <div class="line">
+                <h3><strong>POPOLAR FEATURE </strong>
 
-                  </div></h3> <br>
+                  <div class="line">
+                  </div>
+
+                </h3> <br>
 
                     <span><i class="fas fa-check-circle"></i>&emsp; Contact Insight</span>
                     <span><i class="fas fa-check-circle"></i>&emsp; Deals</span>
@@ -177,13 +205,13 @@
 
               </div>
 
-
-
             </div>
 
-            <!-- columns -->
+            <!-- columns section-->
             <div class="clearfix columns">
 
+
+              <!-- 3 columns section -->
               <div class="boxes">
 
                 <div class="boxes-img">
@@ -195,7 +223,7 @@
                 <p>Marketing software to help you grow <br>traffic, convert more visitors, and run  <br>complete inbound marketing  <br>campaigns at scale. </p>
 
               </div>
-
+                     <!-- left box -->
                <div class="boxes-item">
 
                  <h3>POPOLAR FEATURE</h3>
@@ -204,8 +232,10 @@
 
                      <div><i class="fas fa-check-circle"></i>&emsp; Lead Generation
                      </div>
+
                      <div><i class="fas fa-check-circle"></i>&emsp; Marketing Automation
                      </div>
+
                      <div><i class="fas fa-check-circle"></i>&emsp; Analytics
                      </div>
 
@@ -213,13 +243,14 @@
 
                  <div class="crm-button-boxes">
 
-                   <a  href="#">Learn More</a>
+                   <a  href="#"><strong>Learn More</strong></a>
 
                  </div>
 
                </div>
 
               </div>
+
               <div id="specialbox"class="boxes">
 
                 <div class="boxes-img">
@@ -232,6 +263,8 @@
 
               </div>
 
+
+               <!-- middle box -->
               <div class="boxes-item">
 
                 <h3>POPOLAR FEATURE</h3>
@@ -240,8 +273,10 @@
 
                     <div><i class="fas fa-check-circle"></i>&emsp; Email Tracking
                     </div>
+
                     <div><i class="fas fa-check-circle"></i>&emsp; Meeting Scheduling
                     </div>
+
                     <div><i class="fas fa-check-circle"></i>&emsp; Email Automation
                     </div>
 
@@ -249,13 +284,15 @@
 
                 <div class="crm-button-boxes">
 
-                  <a  href="#">Learn More</a>
+                  <a  href="#"><strong>Learn More</strong></a>
 
                 </div>
 
               </div>
 
               </div>
+
+              <!-- right box -->
               <div class="boxes">
 
                 <div class="boxes-img">
@@ -276,8 +313,10 @@
 
                       <div><i class="fas fa-check-circle"></i>&emsp; Tickets
                       </div>
+
                       <div><i class="fas fa-check-circle"></i>&emsp; Costumer Feedback
                       </div>
+
                       <div><i class="fas fa-check-circle"></i>&emsp; Knowledge Base
                       </div>
 
@@ -285,7 +324,7 @@
 
                   <div class="crm-button-boxes">
 
-                    <a  href="#">Learn More</a>
+                    <a  href="#"><strong>Learn More</strong></a>
 
                   </div>
 
@@ -298,6 +337,7 @@
 
         </div>
 
+          <!-- fine columns section -->
         </section>
 
            <!-- grid sections -->
@@ -307,6 +347,8 @@
 
             <div class="center">
 
+
+                <!-- Grid upper text -->
               <div class="gridtext">
 
                 <h1>Learn and grow with award-winning support and a thriving community <br>  behind you.</h1>
@@ -315,7 +357,8 @@
 
               </div>
 
-              <div class="grid">
+              <!-- Grid section -->
+              <div class="grid clearfix">
 
                 <div class="gridbox">
 
@@ -326,12 +369,14 @@
                   </div>
 
                   <div class="gridboxdown">
+
                       <h1>150 </h1><span> &#43;</span>
                       <p>HubSpot user groups</p>
 
                   </div>
 
                 </div>
+
                 <div class="gridbox">
 
                   <div class="gridboxup">
@@ -340,15 +385,14 @@
 
                   </div>
                   <div class="gridboxdown">
+
                       <h1>4.5M </h1><span> &#43;</span>
                       <p>monthly visits</p>
 
-
                   </div>
 
-
-
                 </div>
+
                 <div class="gridbox">
 
                   <div class="gridboxup">
@@ -356,16 +400,16 @@
                     <img src="img/homepage_community_academy.svg" alt="">
 
                   </div>
+
                   <div class="gridboxdown">
+
                       <h1>155K</h1><span> &#43;</span>
                       <p>certified professionals</p>
 
-
                   </div>
 
-
-
                 </div>
+
                 <div class="gridbox">
 
                   <div class="gridboxup">
@@ -373,14 +417,12 @@
                     <img src="img/homepage_community_inbound.svg" alt="">
 
                   </div>
+
                   <div class="gridboxdown">
                       <h1>21K</h1><span> &#43;</span>
                       <p>registered attendees</p>
 
-
                   </div>
-
-
 
                 </div>
                 <div class="gridbox">
@@ -390,16 +432,16 @@
                     <img src="img/homepage_community_blog.svg" alt="">
 
                   </div>
+
                   <div class="gridboxdown">
+
                       <h1>200</h1><span> &#43;</span>
                       <p>integrations</p>
 
-
                   </div>
 
-
-
                 </div>
+
                 <div class="gridbox">
 
                   <div class="gridboxup">
@@ -407,6 +449,7 @@
                     <img src="img/homepage_community_globe.svg" alt="">
 
                   </div>
+
                   <div class="gridboxdown">
                       <h1>6 </h1><span> &#43;</span>
                       <p>languages</p>
@@ -465,15 +508,17 @@
           <div class="center">
 
         <!-- text and logos on the right -->
-            <div class="prefooterlogo">
+            <div class="prefooterlogo clearfix">
 
-              <div class="prefooterlogo-left">
+              <div class="prefooterlogo-left ">
 
                 <h1>64,500</h1>
                 <p>customers in over <strong>100</strong> <br>  countries growing their<br>businesses with HubSpot</p>
 
               </div>
-              <div class="prefooterlogo-right">
+
+              <!-- sponsor prefooter section -->
+              <div class="prefooterlogo-right clearfix">
 
                 <div class="prefootersponsor">
 
@@ -517,14 +562,12 @@
 
                 </div>
 
-
-
               </div>
 
             </div>
 
-            <!-- text and img on the right -->
-            <div class="prefooterimg">
+            <!-- prefooter text and button  -->
+            <div class="prefooterimg ">
 
               <div class="prefooterimg-text">
 
@@ -542,7 +585,7 @@
 
                 <div class="prefooterimg-item">
 
-                  <span><a href="#">GetHubspotFree</a></span>
+                  <span><a href="#"><strong>GetHubspotFree</strong></a></span>
 
                 </div>
 
@@ -553,13 +596,13 @@
                 </div>
 
                 </div>
+
+                   <!-- prefooter img -->
                   <div class="prefooterimg-logo">
 
-                  <img src="img/woman.webp" alt="">
+                     <img src="img/woman.webp" alt="">
 
-                </div>
-
-
+                  </div>
 
             </div>
 
@@ -577,6 +620,7 @@
 
            <div class="credits">
 
+              <!-- first credit box -->
              <div class="creditbox">
 
                 <ul>
@@ -592,6 +636,7 @@
 
              </div>
 
+             <!-- second credit box -->
              <div class="creditbox">
 
                <ul>
@@ -608,6 +653,7 @@
 
              </div>
 
+              <!-- third credit box -->
              <div class="creditbox">
 
                <ul>
@@ -623,6 +669,7 @@
 
              </div>
 
+              <!-- fourth credit box -->
              <div class="creditbox">
 
                <ul>
@@ -633,14 +680,19 @@
                 <li><a href="#">Get a Free Website Report</a></li>
                 <li><a href="#">HubSpot Templates</a></li>
                 <li><a href="#">Free Tools & Generators</a></li>
+
+                <!-- contact button -->
                 <li><a id="contactbutton" href="#">Contact HubSpot Support</a></li>
 
+                <!-- social icons -->
                 <div class="social">
+
                   <div class="icons">
 
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
 
                   </div>
+
                   <div class="icons">
 
                     <a href="#"><i class="fab fa-instagram"></i></a>
@@ -662,9 +714,7 @@
 
                   </div>
 
-
                 </div>
-
 
               </ul>
 
@@ -674,6 +724,7 @@
 
            <div class="contacts">
 
+               <!-- center box lenguages -->
               <div class="lenguages">
                 <div class="lenguages-center">
 
@@ -692,12 +743,15 @@
 
               <div class="copyright">
 
+                 <!-- Logo & Copyright -->
                 <div class="copyright-left">
 
                   <img src="img/Wordmark-White.svg" alt="">
                   <h3>Copyright &#169; 2019 HubSpot, Inc.</h3>
 
                 </div>
+
+                <!-- Privacy & Legal  -->
                 <div class="copyright-right">
 
                    <a href="#"><h3>Privacy Policy</h3></a>
